--- a/main.css
+++ b/main.css
@@ -17,11 +17,11 @@ main{
 }
 .btns-ctn{
     position: absolute;
-    bottom: 0; left: 0;
+    bottom: 5rem; left: 0;
     padding: 1rem;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: auto auto;
+    grid-template-rows: repeat(3,auto);
     gap: 1rem;
 }
 .btn{
@@ -31,6 +31,16 @@ main{
     font-weight: 900;
 
 }
+.btn-ctn{
+    grid-column: 1/3;
+    grid-row: 3;
+    color: var(--color-primary);
+    padding: .5rem;
+}
+.btn-ctn > label{
+    margin-right: 1rem;
+}
+
 #PrimeNumberCanvas{
     width: 100vw;
     height: 100vh;
