--- a/main.css
+++ b/main.css
@@ -17,12 +17,19 @@ main{
 }
 .btns-ctn{
     position: absolute;
-    bottom: 5rem; left: 0;
+    bottom: 2vh; left: 0;
     padding: 1rem;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(3,auto);
-    gap: 1rem;
+    gap: .5rem;
+}
+@media only screen and (min-width: 700px) {
+    .btns-ctn{
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(2,auto);
+        margin: 0 auto;
+    }
 }
 .btn{
     padding: 5px;
